--- a/nextflow.config
+++ b/nextflow.config
@@ -4,24 +4,32 @@ process {
   errorStrategy = 'finish'
 }
 
-singularity {
-  enabled = true
-  autoMounts = true
+profiles {
+  apptainer {
+    apptainer {
+      enabled = true
+      autoMounts = true
+    }
+  }
+  slurm {
+    process {
+      executor = 'slurm'
+      module = 'apptainer'
+
+      withLabel: dorado { module = 'dorado' }
+    }
+  }
 }
 
-process {
-  executor = 'slurm'
-  module = 'apptainer'
 
-  withLabel: guppy  { module = 'guppy' }
-}
 
 // containers
 process {
   withLabel: linux    { container = 'ubuntu:22.04' }
-  withLabel: pigz     { container = 'ghcr.io/dialvarezs/containers/pigz:2.7' }
+  withLabel: pigz     { container = 'ghcr.io/dialvarezs/containers/utils:lastest' }
   withLabel: fastqc   { container = 'quay.io/biocontainers/fastqc:0.12.1--hdfd78af_0' }
-  withLabel: nanoplot { container = 'quay.io/biocontainers/nanoplot:1.41.3--pyhdfd78af_0' }
-  withLabel: multiqc  { container = 'quay.io/biocontainers/multiqc:1.14--pyhdfd78af_0' }
+  withLabel: nanoplot { container = 'quay.io/biocontainers/nanoplot:1.42.0--pyhdfd78af_0' }
+  withLabel: multiqc  { container = 'quay.io/biocontainers/multiqc:1.18--pyhdfd78af_0' }
   withLabel: pycoqc   { container = 'quay.io/biocontainers/pycoqc:2.5.2--py_0' }
+  withLabel: samtools { container = 'quay.io/biocontainers/samtools:1.18--h50ea8bc_1' }
 }
