--- a/params.default.yml
+++ b/params.default.yml
@@ -2,12 +2,13 @@ experiment_name: ''
 data_dir: input/pod5/
 sample_data: input/samples.csv
 output_dir: demultiplex_results/
-guppy_basecalling_config: dna_r9.4.1_450bps_sup.cfg
-guppy_basecalling_extra_config: ''
-guppy_basecalling_cpus: 32
-guppy_basecalling_gpus: 2
+fastq_output: true
+dorado_basecalling_model: dna_r10.4.1_e8.2_400bps_sup@v4.2.0
+dorado_basecalling_min_qscore: 10
+dorado_basecalling_extra_config: ''
+dorado_basecalling_gpus: 2
 skip_demultiplexing: false
-guppy_barcoding_kits: EXP-NBD196
-guppy_barcoding_both_ends: false
-guppy_barcoding_extra_config: ''
-guppy_barcoding_cpus: 24
+dorado_barcoding_kits: EXP-NBD196
+dorado_barcoding_both_ends: false
+dorado_barcoding_extra_config: ''
+dorado_barcoding_cpus: 24
