Dorado version working

--- a/nextflow.config
+++ b/nextflow.config
@@ -26,7 +26,7 @@ profiles {
 // containers
 process {
   withLabel: linux    { container = 'ubuntu:22.04' }
-  withLabel: pigz     { container = 'ghcr.io/dialvarezs/containers/utils:lastest' }
+  withLabel: pigz     { container = 'ghcr.io/dialvarezs/containers/utils:latest' }
   withLabel: fastqc   { container = 'quay.io/biocontainers/fastqc:0.12.1--hdfd78af_0' }
   withLabel: nanoplot { container = 'quay.io/biocontainers/nanoplot:1.42.0--pyhdfd78af_0' }
   withLabel: multiqc  { container = 'quay.io/biocontainers/multiqc:1.18--pyhdfd78af_0' }
