--- a/params.default.yml
+++ b/params.default.yml
@@ -3,8 +3,8 @@ data_dir: input/pod5/
 sample_data: input/samples.csv
 output_dir: demultiplex_results/
 fastq_output: true
+qscore_filter: 10
 dorado_basecalling_model: dna_r10.4.1_e8.2_400bps_sup@v4.2.0
-dorado_basecalling_min_qscore: 10
 dorado_basecalling_extra_config: ''
 dorado_basecalling_gpus: 2
 skip_demultiplexing: false
