--- a/nextflow.config
+++ b/nextflow.config
@@ -4,32 +4,6 @@ process {
   errorStrategy = 'finish'
 }
 
-profiles {
-  apptainer {
-    apptainer {
-      enabled = true
-      autoMounts = true
-    }
-  }
-  slurm {
-    process {
-      executor = 'slurm'
-      module = 'apptainer'
-
-      withLabel: dorado { module = 'dorado' }
-    }
-  }
-}
-
-
-
-// containers
-process {
-  withLabel: linux    { container = 'ubuntu:22.04' }
-  withLabel: pigz     { container = 'ghcr.io/dialvarezs/containers/utils:latest' }
-  withLabel: fastqc   { container = 'quay.io/biocontainers/fastqc:0.12.1--hdfd78af_0' }
-  withLabel: nanoplot { container = 'quay.io/biocontainers/nanoplot:1.42.0--pyhdfd78af_0' }
-  withLabel: multiqc  { container = 'quay.io/biocontainers/multiqc:1.19--pyhdfd78af_0' }
-  withLabel: pycoqc   { container = 'quay.io/biocontainers/pycoqc:2.5.2--py_0' }
-  withLabel: samtools { container = 'quay.io/biocontainers/samtools:1.19.2--h50ea8bc_0' }
-}
+includeConfig 'conf/profiles.config'
+includeConfig 'conf/params.config'
+includeConfig 'conf/containers.config'
