--- a/conf/containers.config
+++ b/conf/containers.config
@@ -8,8 +8,9 @@ process {
   withLabel: pycoqc   { container = 'quay.io/biocontainers/pycoqc:2.5.2--py_0' }
   withLabel: samtools { container = 'quay.io/biocontainers/samtools:1.19.2--h50ea8bc_0' }
 
-  withLabel: dorado   { container = params.use_dorado_container 
-  									? 'ghcr.io/dialvarezs/containers/dorado:0.5.3'
-									: null
-						}
+  withLabel: dorado   {
+	container = params.use_dorado_container 
+  				? 'ghcr.io/dialvarezs/containers/dorado:0.5.3'
+				: null
+  }
 }
