--- a/conf/profiles.config
+++ b/conf/profiles.config
@@ -10,7 +10,9 @@ profiles {
       executor = 'slurm'
       module = 'apptainer'
 
-      withLabel: dorado { module = 'dorado' }
+      withLabel: dorado {
+		module = params.use_dorado_container ? null : 'dorado'
+	  }
     }
   }
 }
