--- a/conf/containers.config
+++ b/conf/containers.config
@@ -12,5 +12,6 @@ process {
 	container = params.use_dorado_container 
   				? 'ghcr.io/dialvarezs/containers/dorado:0.5.3'
 				: null
+	containerOptions = '--nv'
   }
 }
