--- a/params.example.yml
+++ b/params.example.yml
@@ -8,6 +8,7 @@ dorado_basecalling_model: dna_r10.4.1_e8.2_400bps_sup@v4.2.0
 dorado_basecalling_extra_config: ''
 dorado_basecalling_gpus: 2
 skip_demultiplexing: false
+use_dorado_container: true
 dorado_demux_kit: EXP-NBD196
 dorado_demux_both_ends: false
 dorado_demux_extra_config: ''
