--- a/conf/params.config
+++ b/conf/params.config
@@ -1,17 +1,17 @@
 params {
 	experiment_name = ''
-	data_dir = 'input/pod5/'
+	data_dir = null
 	sample_data = 'input/samples.csv'
 	output_dir = 'demultiplex_results/'
 	fastq_output = true
 	qscore_filter = 10
 	dorado_basecalling_model = 'dna_r10.4.1_e8.2_400bps_sup@v4.3.0'
 	dorado_basecalling_extra_config = ''
-	dorado_basecalling_gpus = 2
+	dorado_basecalling_gpus = 1
 	skip_demultiplexing = false
-	use_dorado_container = true
 	dorado_demux_kit = 'EXP-NBD196'
 	dorado_demux_both_ends = false
 	dorado_demux_extra_config = ''
-	dorado_demux_cpus = 24
+	dorado_demux_cpus = 16
+	use_dorado_container = true
 }
