--- a/conf/containers.config
+++ b/conf/containers.config
@@ -1,14 +1,14 @@
 // containers
 process {
-  withLabel: linux      { container = 'ubuntu:24.04' }
+  withLabel: linux      { container = 'ubuntu:latest' }
   withLabel: fastqc     { container = 'oras://community.wave.seqera.io/library/fastqc:0.12.1--0827550dd72a3745' }
-  withLabel: multiqc    { container = 'oras://community.wave.seqera.io/library/multiqc:1.24.1--438afbfaf9badab9' }
+  withLabel: multiqc    { container = 'ghcr.io/dialvarezs/containers/multiqc:1.24.1' }
   withLabel: nanoplot   { container = 'oras://community.wave.seqera.io/library/nanoplot:1.43.0--bff613afbee91a7e' }
   withLabel: nanoq      { container = 'oras://community.wave.seqera.io/library/nanoq:0.10.0--4d3eac4a4d2fdd79' }
   withLabel: pigz       { container = 'ghcr.io/dialvarezs/containers/utils:latest' }
   withLabel: pycoqc     { container = 'oras://community.wave.seqera.io/library/pycoqc:2.5.2--7773bb01f211893c' }
   withLabel: samtools   { container = 'oras://community.wave.seqera.io/library/samtools:1.20--ad906e74fde1812b' }
-  withLabel: toulligqc  { container = 'genomicpariscentre/toulligqc:2.7' }
+  withLabel: toulligqc  { container = 'genomicpariscentre/toulligqc:2.7.1' }
 
   withLabel: dorado   {
 	container = params.use_dorado_container 
