Finish report config and optional tool running

--- a/nextflow.config
+++ b/nextflow.config
@@ -6,7 +6,7 @@ process {
 
 report {
   enabled = true
-  file = "${params.output_dir}/nextflow_report.html"
+  file = "${params.output_dir}/reports/nextflow_report.html"
   overwrite = true
 }
 
