--- a/conf/params.config
+++ b/conf/params.config
@@ -12,6 +12,6 @@ params {
 	dorado_demux_kit = 'SQK-NBD114-96'
 	dorado_demux_both_ends = false
 	dorado_demux_extra_config = ''
-	use_dorado_container = true,
+	use_dorado_container = true
 	qc_tools = ['fastqc', 'nanoq', 'toulligqc']
 }
