--- a/conf/params.config
+++ b/conf/params.config
@@ -10,6 +10,6 @@ params {
   dorado_demux_kit         = 'SQK-NBD114-96'
   dorado_demux_both_ends   = false
   use_dorado_container     = true
-  qc_tools                 = ['fastqc', 'nanoq', 'toulligqc', 'nanoplot', 'pycoqc']
+  qc_tools                 = ['fastqc', 'nanoq', 'toulligqc']
   showHidden               = false
 }
