--- a/conf/publish.config
+++ b/conf/publish.config
@@ -14,9 +14,8 @@ process {
       mode: 'copy',
       enabled: !params.fastq_output,
       saveAs: { file ->
-        (!params.sample_data && meta.step == 'basecall') ||
-        (params.sample_data && meta.step == 'demux' && meta.classified)
-          ? "${meta.step}/${file}"
+        (!params.sample_data && meta.id == 'basecalled_pass') || (meta.step == 'demux' && meta.classified)
+          ? file
           : null
       },
     ]
@@ -28,11 +27,17 @@ process {
       mode: 'copy',
       enabled: params.fastq_output,
       saveAs: { file ->
-        (!params.sample_data && meta.step == 'basecall') ||
-        (params.sample_data && meta.step == 'demux' && meta.classified)
-          ? "${meta.step}/${file}"
+        (!params.sample_data && meta.id == 'basecalled_pass') || (meta.step == 'demux' && meta.classified)
+          ? file
           : null
       },
+    ]
+  }
+
+  withName: mergeDoradoSummaries {
+    publishDir = [
+      path: "${params.output_dir}/sequencing_info/",
+      mode: 'copy',
     ]
   }
 
