Allow basecalled input

--- a/conf/params.config
+++ b/conf/params.config
@@ -3,6 +3,7 @@ params {
   data_dir                 = null
   sample_data              = null
   output_dir               = 'results/'
+  basecalled_input         = false
   fastq_output             = true
   qscore_filter            = 12
   dorado_basecalling_model = 'sup'
