--- a/conf/publish.config
+++ b/conf/publish.config
@@ -34,6 +34,18 @@ process {
     ]
   }
 
+  withName: concatFastq {
+    publishDir = [
+      path: "${params.output_dir}/reads",
+      mode: 'copy',
+      saveAs: { file ->
+        params.sample_data && meta.id != 'unclassified'
+          ? file
+          : null
+      },
+    ]
+  }
+
   withName: mergeDoradoSummaries {
     publishDir = [
       path: "${params.output_dir}/sequencing_info/",
